--- a/AarkNotify/appsettings.json
+++ b/AarkNotify/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "Sqlite": "Data Source=aarknotify.db"
+  "SystemConfig": {
+    "Debug": true
   }
 }
