飞书通知调整

--- a/AarkNotify/AarkNotify.csproj
+++ b/AarkNotify/AarkNotify.csproj
@@ -7,6 +7,12 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="aarknotify.db" />
+    <None Remove="aarknotify.db-shm" />
+    <None Remove="aarknotify.db-wal" />
+  </ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.4" />
